--- a/ds_interview_challenge.ipynb
+++ b/ds_interview_challenge.ipynb
@@ -5,13 +5,7 @@
    "id": "44c98d7a",
    "metadata": {},
    "source": [
-    "# Legal Software Engineering Challenge\n",
-    "\n",
-    "Welcome to this coding challenge for a Legal Knowledge Engineer position! This notebook contains a few focused tasks designed to assess your software engineering skills in a legal tech context.\n",
-    "\n",
-    "Please work through each task, completing the implementations as instructed. Feel free to add cells as needed for your work.\n",
-    "\n",
-    "**Time Recommendation:** 30 minutes (to leave 30 minutes for discussion)"
+    "# Legal Software Engineering Challenge\n"
    ]
   },
   {
@@ -19,37 +13,7 @@
    "id": "63d03ff5",
    "metadata": {},
    "source": [
-    "## 1. Setup and Environment\n",
-    "\n",
-    "First, let's import the essential libraries we'll need for this challenge."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d362754",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import essential libraries - focusing on software engineering tools\n",
-    "import json\n",
-    "import re\n",
-    "from typing import List, Dict, Optional, Any, Union\n",
-    "from enum import Enum\n",
-    "from datetime import datetime, date\n",
-    "import uuid\n",
-    "\n",
-    "# Import Pydantic for data validation\n",
-    "try:\n",
-    "    from pydantic import BaseModel, Field, validator\n",
-    "    print(\"Pydantic successfully imported\")\n",
-    "except ImportError:\n",
-    "    print(\"Installing pydantic...\")\n",
-    "    !pip install pydantic\n",
-    "    from pydantic import BaseModel, Field, validator\n",
-    "    print(\"Pydantic installed and imported\")\n",
-    "\n",
-    "print(\"Environment setup complete!\")"
+    "## 1. Mock Data"
    ]
   },
   {
@@ -225,8 +189,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
