--- a/ds_interview_challenge.ipynb
+++ b/ds_interview_challenge.ipynb
@@ -137,8 +137,9 @@
     "\n",
     "This can be implemented in either Python (e.g. with Pydantic) or TypeScript (with interfaces/classes).\n",
     "\n",
-    "Bonus: Add validation to ensure that `expiration_date` is after `effective_date`.\n",
-    "Bonus 2: A method in Contract to add a clause\n",
+    "Bonus: Add a method in Contract that allows a clause\n",
+    "\n",
+    "Bonus 2: Add validation to ensure that `expiration_date` is after `effective_date`.\n",
     "\n"
    ]
   },
@@ -147,10 +148,20 @@
    "execution_count": null,
    "id": "207a1796",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/maxim/AppData/Local/Microsoft/WindowsApps/python3.11.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "# Define your Pydantic models"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
