--- a/ds_interview_challenge.ipynb
+++ b/ds_interview_challenge.ipynb
@@ -164,8 +164,8 @@
     "\n",
     "1. Assumes a set of possible extraction types, e.g. \"monetary values\", \"time periods\"\n",
     "2. Provides non-implemented functions for each extraction type\n",
-    "   - Time period extraction (e.g., \"30 days\", \"five years\")\n",
-    "   - Monetary value extraction (e.g., \"1.5% per month\", \"$500\")\n",
+    "   - Time period extraction\n",
+    "   - Monetary value extraction\n",
     "\n",
     "You don't need to implement the extraction logic, but should ideate possible strategies for implementation for both functions. The class can be created in either Python or TypeScript."
    ]
