Even more cleanup

--- a/ds_interview_challenge.ipynb
+++ b/ds_interview_challenge.ipynb
@@ -59,54 +59,6 @@
     "        \"effective_date\": \"2023-08-01\",\n",
     "        \"expiration_date\": \"2028-08-01\"\n",
     "    },\n",
-    "    {\n",
-    "        \"id\": \"c005\",\n",
-    "        \"contract_id\": \"con789\",\n",
-    "        \"clause_type\": \"indemnification\",\n",
-    "        \"text\": \"Each Party shall defend, indemnify, and hold harmless the other Party from and against any and all claims, damages, losses, liabilities, costs, and expenses (including reasonable attorneys' fees) arising out of or relating to any third-party claim alleging that the Indemnifying Party's products or services infringe a copyright, patent, trademark, or other intellectual property right.\",\n",
-    "        \"effective_date\": \"2023-05-10\",\n",
-    "        \"expiration_date\": \"2025-05-10\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"c006\",\n",
-    "        \"contract_id\": \"con789\",\n",
-    "        \"clause_type\": \"limitation_of_liability\",\n",
-    "        \"text\": \"EXCEPT FOR LIABILITY ARISING FROM CONFIDENTIALITY OBLIGATIONS OR INDEMNIFICATION OBLIGATIONS, NEITHER PARTY SHALL BE LIABLE TO THE OTHER PARTY FOR ANY INDIRECT, INCIDENTAL, CONSEQUENTIAL, SPECIAL, PUNITIVE OR EXEMPLARY DAMAGES, INCLUDING LOST PROFITS, LOST REVENUE, OR LOSS OF BUSINESS OPPORTUNITY, EVEN IF SUCH PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.\",\n",
-    "        \"effective_date\": \"2023-05-10\",\n",
-    "        \"expiration_date\": \"2025-05-10\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"c007\",\n",
-    "        \"contract_id\": \"con789\",\n",
-    "        \"clause_type\": \"force_majeure\",\n",
-    "        \"text\": \"Neither Party shall be liable for any failure or delay in performing its obligations under this Agreement if such failure or delay is caused by circumstances beyond the reasonable control of the Party affected, including but not limited to acts of God, natural disasters, pandemic, epidemic, war, terrorism, riots, civil disorder, acts of government, fire, or strikes.\",\n",
-    "        \"effective_date\": \"2023-05-10\",\n",
-    "        \"expiration_date\": \"2025-05-10\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"c008\",\n",
-    "        \"contract_id\": \"con101\",\n",
-    "        \"clause_type\": \"confidentiality\",\n",
-    "        \"text\": \"Recipient agrees to keep all Proprietary Information in confidence and not to disclose any Proprietary Information to any third party without prior written approval of Discloser. Recipient shall use the same degree of care as it uses with its own confidential information, but in no event less than reasonable care.\",\n",
-    "        \"effective_date\": \"2024-01-20\",\n",
-    "        \"expiration_date\": \"2027-01-20\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"c009\",\n",
-    "        \"contract_id\": \"con102\",\n",
-    "        \"clause_type\": \"intellectual_property\",\n",
-    "        \"text\": \"All rights, title and interest in and to each party's Intellectual Property shall remain the sole property of such party. Neither party shall acquire any rights, title or interest in the Intellectual Property of the other party pursuant to this Agreement, except for the limited license rights expressly set forth herein.\",\n",
-    "        \"effective_date\": \"2023-11-05\",\n",
-    "        \"expiration_date\": \"2026-11-05\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"c010\",\n",
-    "        \"contract_id\": \"con103\",\n",
-    "        \"clause_type\": \"data_protection\",\n",
-    "        \"text\": \"The Parties shall comply with all applicable data protection and privacy laws and regulations, including without limitation the General Data Protection Regulation (EU) 2016/679 (GDPR) and the California Consumer Privacy Act (CCPA). Each Party shall implement appropriate technical and organizational measures to protect Personal Data against unauthorized or unlawful processing and against accidental loss, destruction, damage, alteration, or disclosure.\",\n",
-    "        \"effective_date\": \"2024-02-15\",\n",
-    "        \"expiration_date\": \"2027-02-15\"\n",
-    "    }\n",
     "]"
    ]
   },
@@ -117,7 +69,7 @@
    "source": [
     "### Task 1: Create Models for Legal Entities\n",
     "\n",
-    "Let's assume the following data structure:\n",
+    "First, create the following models (e.g. with pydantic):\n",
     "\n",
     "1. A `ClauseType` enum with types like \"confidentiality\", \"termination\", etc.\n",
     "2. A `Clause`:\n",
@@ -135,7 +87,7 @@
     "   - effective_date\n",
     "   - clauses\n",
     "\n",
-    "This can be implemented in either Python (e.g. with Pydantic) or TypeScript (with interfaces/classes).\n",
+    "Second, write a function to create the models out of the mock data above.\n",
     "\n",
     "Bonus: Add a method in Contract that allows a clause\n",
     "\n",
@@ -167,7 +119,7 @@
     "   - Time period extraction\n",
     "   - Monetary value extraction\n",
     "\n",
-    "You don't need to implement the extraction logic, but should ideate possible strategies for implementation for both functions. The class can be created in either Python or TypeScript."
+    "You don't need to implement the extraction logic, but should ideate possible strategies for implementation for both functions."
    ]
   },
   {
