--- a/ds_interview_challenge.ipynb
+++ b/ds_interview_challenge.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "Second, write a function to create the models out of the mock data above.\n",
     "\n",
-    "Bonus: Add a method in Contract that allows a clause\n",
+    "Bonus: Add a method in Contract that allows to add a clause\n",
     "\n",
     "Bonus 2: Add validation to ensure that `expiration_date` is after `effective_date`.\n",
     "\n"
